k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: signpod-web
spec:
  selector:
    app: signpod-web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
