k8s/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-node-service
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: backend-node-service
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - port: 4000
      targetPort: 4000
      protocol: TCP
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: /
    kubernetes.io/ingress.global-static-ip-name: signpod-ip
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-node-service
                port:
                  number: 3000
          - path: /api/*
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-node-service
                port:
                  number: 4000
